--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "ascrape": "^0.2.0",
     "node-fetch": "^2.1.2",
-    "ournet.data.news": "^0.3.6"
+    "ournet.data.news": "^0.3.6",
+    "ournet.logger": "^0.1.0"
   }
 }
