--- a/package.json
+++ b/package.json
@@ -45,6 +45,15 @@
     "typescript": "latest"
   },
   "dependencies": {
+    "@textactor/actor-data": "^0.1.3",
+    "@textactor/actor-domain": "^0.1.3",
+    "@textactor/concept-collector": "^0.1.0",
+    "@textactor/concept-data": "^0.1.1",
+    "@textactor/concept-domain": "^0.1.0",
+    "@textactor/domain": "^0.1.5",
+    "@textactor/known-names": "^0.1.0",
+    "@textactor/wikientity-data": "^0.1.1",
+    "@textactor/wikientity-domain": "^0.1.1",
     "ascrape": "^0.2.0",
     "node-fetch": "^2.1.2",
     "ournet.data.news": "^0.3.6",
