--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "collect": "node ./lib/collect-concepts-app.js",
-    "collect-from-queries": "node ./lib/collect-concepts-from-queries-app.js",
+    "generate-from-queries": "node ./lib/generate-from-queries-app.js",
     "generate": "node ./lib/generate-actors-app.js",
     "pretest": "yarn run clean && yarn run tsc",
     "test": "ava --no-cache --verbose lib/**/*.test.js",
@@ -47,11 +47,7 @@
   "dependencies": {
     "@textactor/actor-data": "^0.1.3",
     "@textactor/actor-domain": "^0.1.3",
-    "@textactor/concept-collector": "^0.1.1",
-    "@textactor/concept-data": "^0.1.2",
-    "@textactor/concept-domain": "^0.1.2",
     "@textactor/domain": "^0.1.5",
-    "@textactor/known-names": "^0.1.0",
     "@textactor/wikientity-data": "^0.1.1",
     "@textactor/wikientity-domain": "^0.1.1",
     "ascrape": "^0.2.0",
