--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "actors-generator",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Actors generator app",
   "private": true,
   "scripts": {
@@ -45,14 +45,15 @@
     "typescript": "latest"
   },
   "dependencies": {
-    "@textactor/actor-data": "^0.1.3",
-    "@textactor/actor-domain": "^0.1.3",
-    "@textactor/domain": "^0.1.5",
-    "@textactor/wikientity-data": "^0.1.1",
-    "@textactor/wikientity-domain": "^0.1.1",
+    "@textactor/actor-data": "^0.1.4",
+    "@textactor/actor-domain": "^0.1.4",
+    "@textactor/domain": "^0.1.6",
+    "@textactor/wikientity-data": "^0.1.2",
+    "@textactor/wikientity-domain": "^0.1.2",
     "ascrape": "^0.2.0",
     "node-fetch": "^2.1.2",
     "ournet.data.news": "^0.3.6",
-    "ournet.logger": "^0.1.0"
+    "ournet.logger": "^0.1.0",
+    "textactor-explorer": "^0.1.0"
   }
 }
