--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "module": "commonjs",
         "outDir": "lib",
         "rootDir": "./src",
-        "target": "es6",
+        "target": "es2017",
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
@@ -12,7 +12,8 @@
         "declaration": false,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "allowJs": false
+        "allowJs": false,
+        "strict": true
     },
     "formatCodeOptions": {
         "indentSize": 2,
