--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "homepage": "https://Mitea@bitbucket.org/entitizer/actors-generator#readme",
   "devDependencies": {
     "@types/mongodb": "^3.1.14",
-    "@types/node": "^10.12.5",
+    "@types/node": "^10.12.6",
     "@types/node-fetch": "^2.1.2",
     "ava": "^0.25.0",
     "dotenv": "^6.1.0",
@@ -46,11 +46,18 @@
     "typescript": "3.1.6"
   },
   "dependencies": {
+    "@textactor/actor-data": "^0.2.0",
+    "@textactor/actor-domain": "^0.2.0",
+    "@textactor/actors-explorer": "^0.1.0",
+    "@textactor/concept-data": "^0.2.0",
+    "@textactor/concept-domain": "^0.2.0",
+    "@textactor/domain": "^0.2.0",
+    "@textactor/wikientity-data": "^0.2.0",
+    "@textactor/wikientity-domain": "^0.2.0",
     "ascrape": "^0.2.0",
-    "aws-sdk": "^2.353.0",
+    "aws-sdk": "^2.354.0",
     "mongodb": "^3.1.9",
-    "node-fetch": "^2.2.1",
-    "ournet.data.news": "^0.3.6",
+    "node-fetch": "^2.3.0",
     "ournet.logger": "^0.1.0"
   }
 }
