--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
   "dependencies": {
     "@textactor/actor-data": "^0.2.0",
     "@textactor/actor-domain": "^0.2.0",
-    "@textactor/actors-explorer": "^0.1.0",
+    "@textactor/actors-explorer": "^0.1.1",
     "@textactor/concept-data": "^0.2.0",
     "@textactor/concept-domain": "^0.2.0",
     "@textactor/domain": "^0.2.0",
+    "@textactor/known-names": "^0.1.1",
     "@textactor/wikientity-data": "^0.2.0",
     "@textactor/wikientity-domain": "^0.2.0",
     "ascrape": "^0.2.0",
