--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/mongodb": "^3.1.18",
     "@types/node": "^10.12.18",
     "@types/node-fetch": "^2.1.4",
-    "ava": "^1.0.1",
+    "ava": "0.25.0",
     "dotenv": "^6.2.0",
     "rimraf": "^2.6.3",
     "typescript": "3.2.2"
