--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dev": "sh dev.sh"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   },
   "repository": {
     "type": "git",
@@ -40,25 +40,24 @@
     "@types/mongodb": "^3.1.18",
     "@types/node": "^10.12.18",
     "@types/node-fetch": "^2.1.4",
-    "ava": "0.25.0",
-    "dotenv": "^6.2.0",
-    "rimraf": "^2.6.3",
-    "typescript": "3.2.2"
+    "ava": "^3.15.0",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@textactor/actor-data": "^0.2.1",
-    "@textactor/actor-domain": "^0.2.3",
-    "@textactor/actors-explorer": "^0.1.9",
-    "@textactor/concept-data": "^0.2.1",
-    "@textactor/concept-domain": "^0.2.1",
-    "@textactor/domain": "^0.2.0",
+    "@textactor/actor-data": "^0.3.0",
+    "@textactor/actor-domain": "^0.2.4",
+    "@textactor/actors-explorer": "^0.2.0",
+    "@textactor/concept-data": "^0.3.0",
+    "@textactor/concept-domain": "^0.3.0",
+    "@textactor/domain": "^0.3.0",
     "@textactor/known-names": "^0.1.2",
     "@textactor/wikientity-data": "^0.2.0",
     "@textactor/wikientity-domain": "^0.2.0",
     "ascrape": "^0.2.0",
     "aws-sdk": "^2.384.0",
-    "mongodb": "^3.1.10",
-    "node-fetch": "^2.3.0",
-    "ournet.logger": "^0.1.0"
+    "dotenv": "^16.0.3",
+    "mongodb": "^4.16.0",
+    "node-fetch": "^2.3.0"
   }
 }
