--- a/package.json
+++ b/package.json
@@ -45,15 +45,15 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@textactor/actor-data": "^0.3.0",
-    "@textactor/actor-domain": "^0.2.4",
-    "@textactor/actors-explorer": "^0.2.0",
-    "@textactor/concept-data": "^0.3.0",
-    "@textactor/concept-domain": "^0.3.0",
-    "@textactor/domain": "^0.3.0",
-    "@textactor/known-names": "^0.1.2",
-    "@textactor/wikientity-data": "^0.2.0",
-    "@textactor/wikientity-domain": "^0.2.0",
+    "@textactor/actor-data": "^0.3.x",
+    "@textactor/actor-domain": "^0.2.x",
+    "@textactor/actors-explorer": "^0.2.x",
+    "@textactor/concept-data": "^0.3.x",
+    "@textactor/concept-domain": "^0.3.x",
+    "@textactor/domain": "^0.3.x",
+    "@textactor/known-names": "^0.1.x",
+    "@textactor/wikientity-data": "^0.2.x",
+    "@textactor/wikientity-domain": "^0.2.x",
     "ascrape": "^0.2.0",
     "aws-sdk": "^2.384.0",
     "dotenv": "^16.0.3",
